--- a/bin/com/spendWise/views/DashboardContent.fxml
+++ b/bin/com/spendWise/views/DashboardContent.fxml
@@ -9,12 +9,12 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="DashbordPage" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #eeccff;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.spendWise.controllers.DashboardContentController" >
+<AnchorPane id="DashbordPage" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: #eeccff;" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.spendWise.controllers.DashboardContentController">
    <children>
       <Rectangle fx:id="RectangleDate" arcHeight="5.0" arcWidth="5.0" fill="WHITE" height="25.0" layoutX="240.0" layoutY="14.0" stroke="WHITE" strokeType="INSIDE" width="120.0" />
       <TabPane fx:id="TabPaneAccountDetails" layoutX="16.0" layoutY="48.0" prefHeight="151.0" prefWidth="567.0" style="-fx-background-color: white;" tabClosingPolicy="UNAVAILABLE">
         <tabs>
-          <Tab fx:id="TabAccountDetails" text="Account Details" style="-fx-background-color: #55DA68;">
+          <Tab fx:id="TabAccountDetails" style="-fx-background-color: #55DA68;" text="Account Details">
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="158.0" prefWidth="567.0">
                      <children>
@@ -22,8 +22,11 @@
                         <Label fx:id="LableBankBalance" layoutX="305.0" layoutY="17.0" text="Bank Balance :" />
                         <Label fx:id="LableTotalBalance" layoutX="172.0" layoutY="46.0" text="Total Balance :" />
                         <Rectangle fx:id="RectangleCashBalance" arcHeight="5.0" arcWidth="5.0" fill="#e2aef2" height="20.0" layoutX="104.0" layoutY="16.0" stroke="#e2aef2" strokeType="INSIDE" width="160.0" />
+                        <Label fx:id="cashBalanceLabel" alignment="CENTER_RIGHT" layoutX="104.0" layoutY="16.0" prefHeight="20.0" prefWidth="160.0" textAlignment="RIGHT" />
                         <Rectangle fx:id="RectangleBankBalance" arcHeight="5.0" arcWidth="5.0" fill="#e2aef2" height="20.0" layoutX="393.0" layoutY="16.0" stroke="#e2aef2" strokeType="INSIDE" width="160.0" />
+                        <Label fx:id="bankBalanceLabel" alignment="CENTER_RIGHT" layoutX="393.0" layoutY="16.0" prefHeight="20.0" prefWidth="160.0" textAlignment="RIGHT" />
                         <Rectangle fx:id="RectangleTotalBalance" arcHeight="5.0" arcWidth="5.0" fill="#e2aef2" height="20.0" layoutX="252.0" layoutY="45.0" stroke="#e2aef2" strokeType="INSIDE" width="160.0" />
+                        <Label fx:id="totalBalanceLabel" alignment="CENTER_RIGHT" layoutX="252.0" layoutY="45.0" prefHeight="20.0" prefWidth="160.0" textAlignment="RIGHT" />
                         <Button fx:id="ButtonEditTransaction" layoutX="225.0" layoutY="82.0" mnemonicParsing="false" style="-fx-background-color: #ff9900;-fx-text-fill: white;" text="Edit a Transaction" />
                         <Button fx:id="ButtonCorrectError" layoutX="375.0" layoutY="82.0" mnemonicParsing="false" style="-fx-background-color: #ff9900;-fx-text-fill: white;" text="Correct an Error" />
                         <Button fx:id="ButtonAddTransaction" layoutX="75.0" layoutY="82.0" mnemonicParsing="false" style="-fx-background-color: #ff9900;-fx-text-fill: white;" text="Add a Transaction" />
@@ -35,26 +38,26 @@
       </TabPane>
       <TabPane fx:id="TabPaneTransactionHistory" layoutX="16.0" layoutY="218.0" prefHeight="170.0" prefWidth="567.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
-          <Tab fx:id="TabTransactionHistory" text="Transaction History" style="-fx-background-color: #55DA68;">
+          <Tab fx:id="TabTransactionHistory" style="-fx-background-color: #55DA68;" text="Transaction History">
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0" style="-fx-background-color: #fff;">
                      <children>
                         <Rectangle fx:id="RctangleTransaction" arcHeight="5.0" arcWidth="5.0" fill="#ffe0b3" height="35.0" layoutX="21.0" layoutY="8.0" stroke="#ffe0b3" strokeType="INSIDE" width="526.0" />
-                        <Text layoutX="30.0" layoutY="30.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Transaction 1">
+                        <Text fx:id="lastTransaction1" layoutX="30.0" layoutY="30.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Transaction 1">
                            <font>
                               <Font size="14.0" />
                            </font>
                         </Text>
                         <Button fx:id="ButtonUndo" layoutX="435.0" layoutY="8.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="111.0" style="-fx-background-color: #ff9900;-fx-text-fill: white;" text="Undo" />
                         <Rectangle fx:id="RctangleTransaction" arcHeight="5.0" arcWidth="5.0" fill="#ffe0b3" height="35.0" layoutX="21.0" layoutY="89.0" stroke="#ffe0b3" strokeType="INSIDE" width="526.0" />
-                        <Text layoutX="30.0" layoutY="111.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Transaction 3">
+                        <Text fx:id="lastTransaction2" layoutX="30.0" layoutY="111.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Transaction 3">
                            <font>
                               <Font size="14.0" />
                            </font>
                         </Text>
                         <Button fx:id="ButtonUndo" layoutX="435.0" layoutY="89.0" mnemonicParsing="false" prefHeight="35.0" prefWidth="111.0" style="-fx-background-color: #ff9900;-fx-text-fill: white;" text="Undo" />
                         <Rectangle fx:id="RctangleTransaction" arcHeight="5.0" arcWidth="5.0" fill="#ffe0b3" height="35.0" layoutX="21.0" layoutY="48.0" stroke="#ffe0b3" strokeType="INSIDE" width="526.0" />
-                        <Text layoutX="30.0" layoutY="70.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Transaction 2">
+                        <Text fx:id="lastTransaction3" layoutX="30.0" layoutY="70.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Transaction 2">
                            <font>
                               <Font size="14.0" />
                            </font>
@@ -66,6 +69,6 @@
           </Tab>
         </tabs>
       </TabPane>
-      <Text fx:id="TextDate" layoutX="289.0" layoutY="31.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Date" />
+      <Label fx:id="userLabel" alignment="CENTER" layoutX="240.0" layoutY="14.0" prefHeight="25.0" prefWidth="120.0" textAlignment="CENTER" />
    </children>
 </AnchorPane>
