--- a/src/com/spendWise/views/AddTransaction.fxml
+++ b/src/com/spendWise/views/AddTransaction.fxml
@@ -2,46 +2,26 @@
 
 <?import javafx.scene.control.Accordion?>
 <?import javafx.scene.control.Button?>
-<?import javafx.scene.control.ChoiceBox?>
+<?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.DatePicker?>
-<?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane id="AddTransactionPage" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: BEFFC8;" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.spendWise.controllers.AddTransactionController">
+<AnchorPane id="AddTransactionPage" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" style="-fx-background-color: BEFFC8;" xmlns="http://javafx.com/javafx/23" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.spendWise.controllers.AddTransactionController">
    <children>
-      <ChoiceBox fx:id="ChoiceBoxSelectDebetAccount" layoutX="65.0" layoutY="42.0" prefHeight="35.0" prefWidth="446.0" />
-      <Label fx:id="LabelSelectDebitAccount" layoutX="65.0" layoutY="22.0" text="Select the Debiting Account">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Label>
-      <Label fx:id="LabelSelectCredictAccount" layoutX="66.0" layoutY="90.0" prefHeight="20.0" prefWidth="222.0" text="Select the Crediting Account">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Label>
-      <ChoiceBox fx:id="ChoiceBoxSelectCreditAccount" layoutX="65.0" layoutY="118.0" prefHeight="35.0" prefWidth="446.0" />
-      <Label fx:id="LabelSelectTransactionDate" layoutX="66.0" layoutY="169.0" prefHeight="20.0" prefWidth="222.0" text="Select the Transaction Date">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Label>
-      <DatePicker fx:id="DatePickerSelectTransactionDate" layoutX="65.0" layoutY="189.0" prefHeight="35.0" prefWidth="446.0" />
-      <Text fx:id="TextDateType" fill="#636161" layoutX="79.0" layoutY="235.0" strokeType="OUTSIDE" strokeWidth="0.0" text="MM/DD/YYYY" wrappingWidth="106.61090087890625">
+      <DatePicker fx:id="DatePickerSelectTransactionDate" layoutX="65.0" layoutY="148.0" prefHeight="35.0" prefWidth="446.0" promptText="Select the Transaction Date" />
+      <Text fx:id="TextDateType" fill="#636161" layoutX="79.0" layoutY="196.0" strokeType="OUTSIDE" strokeWidth="0.0" text="MM/DD/YYYY" wrappingWidth="106.61090087890625">
          <font>
             <Font size="10.0" />
          </font>
       </Text>
-      <Button fx:id="ButtonAddTransaction" layoutX="214.0" layoutY="344.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="150.0" style="-fx-background-color: #ff9900;-fx-text-fill: white;" text="Add Transaction" />
+      <Button fx:id="ButtonAddTransaction" layoutX="214.0" layoutY="330.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="150.0" style="-fx-background-color: #ff9900;-fx-text-fill: white;" text="Add Transaction" />
       <Accordion />
-      <TextField fx:id="TextFieldAmount" layoutX="66.0" layoutY="273.0" prefHeight="35.0" prefWidth="446.0" />
-      <Label fx:id="LabelAmount" layoutX="66.0" layoutY="247.0" prefHeight="20.0" prefWidth="222.0" text="Amount of the Transaction">
-         <font>
-            <Font size="14.0" />
-         </font>
-      </Label>
+      <TextField fx:id="TextFieldAmount" layoutX="66.0" layoutY="206.0" prefHeight="35.0" prefWidth="446.0" promptText="Enter the Transaction Amount" />
+      <ComboBox fx:id="debitAccountComboBox" layoutX="66.0" layoutY="41.0" prefHeight="35.0" prefWidth="446.0" promptText="Select the Debit Account" />
+      <ComboBox fx:id="creditAccountComboBox" layoutX="66.0" layoutY="94.0" prefHeight="35.0" prefWidth="446.0" promptText="Select the Credit Account" />
+      <TextField fx:id="TextFieldDescription" layoutX="65.0" layoutY="259.0" prefHeight="35.0" prefWidth="446.0" promptText="Enter the Transaction Description" />
    </children>
 </AnchorPane>
